--- a/server/config.json
+++ b/server/config.json
@@ -1,6 +1,6 @@
 {
     "data_base": {
-        "ip": "192.168.0.214",
+        "ip": "localhost",
         "puerto": 5432,
         "user": "postgres",
         "pass": "postgres",
